<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="administrator_activation">Administrator Activation</string>
    <string name="administrator_device">Device Administrator</string>
    <string name="administrator_disabled">Disabled</string>
    <string name="administrator_disable_requested">Existing firewall will remain active.</string>
    <string name="administrator_enabled">Enabled</string>
    <string name="app_description">Restrict Mobile Data</string>
    <string name="app_name">KNOX Firewall</string>
    <string name="apps_allow_selected">Allow Selection</string>
    <string name="apps_deny_selected">Deny Selection</string>
    <string name="apps_toggle_select">Toggle Selection</string>
    <string name="firewall_rules_apply">Apply Rules</string>
    <string name="firewall_rules_complete">Completed Successfully</string>
    <string name="firewall_rules_create">Creating Rules ...</string>
    <string name="license_activate">Activate</string>
    <string name="license_activation_fail">Activation Failed</string>
    <string name="license_activation">License Activation</string>
    <string name="license_activation_success">Activation Succeeded</string>
    <string name="license_key_invalid">Invalid License Key</string>
    <string name="license_key_paste">Please paste a valid license key.</string>
    <string name="password_changed">Password Changed</string>
    <string name="password_failed">Password Failed</string>
    <string name="password_succeeded">Password Succeeded</string>
    <string-array name="tab_titles">
        <item>Allowed</item>
        <item>Denied</item>
    </string-array>

</resources>